--- a/index.html
+++ b/index.html
@@ -1,1 +1,265 @@
-Welcome to Nakahara Lab.@Tohoku Univ.
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta property='og:type' content='website'>
+  <meta property='og:title' content='WebデザイナーTARO YAMADA ポートフォリオ'>
+  <meta property='og:url' content='URLが入る'>
+  <meta property='og:description' content='TARO YAMADAのポートフォリオサイトです。'>
+  <meta property="og:image" content="img/ogp.png">
+  <meta name="description" content="TARO YAMADAのポートフォリオサイトです" />
+  <title>東北大学 中原研究室</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
+  <link href="css/ress.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="img/favicon.ico" />
+  <link rel=”canonical” href=”URLが入る” />
+</head>
+
+<body>
+  <div class="wrapper">
+
+    <!-- header -->
+    <header class="header ">
+      <div class="container">
+        <h1 class="header-logo">
+          <a href=".">TOHOKU UNIV. NAKAHARA LAB.</a>
+        </h1>
+        <nav class="gnav">
+          <ul class="gnav-list">
+            <li class="gnav-item"><a href="#works">ABOUT LAB.</a></li>
+            <li class="gnav-item"><a href="#skill">PROF. NAKAHARA</a></li>
+            <li class="gnav-item"><a href="#skill">MEMBER</a></li>
+            <li class="gnav-item"><a href="#about">PUBLICATIONS</a></li>
+            <li class="gnav-item"><a href="#contact">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- /header -->
+
+    <main class="content">
+
+      <!-- mv -->
+      <div class="mv">
+        <div class="mv-container">
+          <p class="mv-title">NAKAHARA LAB.</p>
+          <p class="mv-subtitle">TOHOKU UNIVERSITY</p>
+          <p class="mv-text">
+            東北大学未踏スケールデータアナリティクスセンターにて<br>
+            新しい再構成可能なLSIをベースとした計算機システムの研究開発を行う研究室です<br>
+          </p>
+        </div>
+      </div>
+      <!-- /mv -->
+
+      <!-- works -->
+      <section class="works section" id="works">
+        <div class="container">
+          <h2 class="title">ABOUT LAB.</h2>
+          <p>再構成可能なLSIであるリコンフィギャラブルシステムについて研究を行っています。特に、FPGA（Field Programmable Gate Array）に関するAIの実装方法、応用方法、高性能計算について研究しています。
+          <br>
+
+          <div class="works-list">
+            <div class="works-item">
+              <div class="works-img"><img src="img/versal.png" alt="" /></div>
+              <p class="works-name">AIアクセラレータ</p>
+              <p class="works-info">AIの一種に深層学習(Deep Learning)があり、当研究室ではDeep Learningを高速に処理するアクセラレータをFPGAで実装する方法を研究開発しています。特にAIモデルの軽量化と専用ハードウェアに関して先行して成果を出しています。
+
+              多数の企業との共同研究プロジェクトがあり、最新のFPGAを使った開発が体験できます。</p>
+            </div>
+
+            <div class="works-item">
+              <div class="works-img"><img src="img/fpga.png" alt="" /></div>
+              <p class="works-name">新しいFPGA</p>
+              <p class="works-info">ムーアの法則の終焉が議論されており、従来タイプのFPGAの進展が終わる予測があります。Versal ACAPなどの新構造LSIの研究開発を行います。このプロジェクトはOpenLANEのようなOpenEDAの開発も含まれております。</p>
+            </div>
+
+            <div class="works-item">
+              <div class="works-img"><img src="img/fpga_box.png" alt="" /></div>
+              <p class="works-name">FPGAベース高性能計算</p>
+              <p class="works-info">クラウドなどのデータセンターでは計算を高速化する需要があり、プログラマブルなFPGAを活用する機会が増えています。
+              特にDeep Learningの学習を高速化する学習アクセラレータとそのクラスター構成を研究しています。</p>
+            </div>
+
+            <div class="works-item">
+              <div class="works-img"><img src="img/mvl.png" alt="" /></div>
+              <p class="works-name">Multiple-valued logic (MVL)</p>
+              <p class="works-info">現在のほぼ大多数のVLSIは2値(Binary)表現で設計されていますが、多値表現を用いることでより効率的なVLSIを実現できる可能性があります。この研究は数学的な内容が多く、理論的な研究テーマです。
+
+              MVLを活用したDeep Learningやそのハードウェア化に関する研究を行っています。</p>
+            </div>
+
+            <div class="works-item">
+              <div class="works-img"><img src="img/tai.png" alt="" /></div>
+              <p class="works-name">AI技術の社会実装</p>
+              <p class="works-info">研究成果は論文で発表するだけでなく、ベンチャー企業(Tokyo Artisan Intelligence株式会社, 東北大学発ベンチャー)を通じたビジネスでの活用まで取り組んでおります。</p>
+            </div>
+
+          </div>
+        </div>
+      </section>
+      <!-- /works -->
+
+      <!-- skill -->
+      <section class="skill section" id="skill">
+        <div class="container">
+          <h2 class="title">MEMBER</h2>
+          <div class="skill-list">
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">教授</h3>
+                <p class="skill-text">
+                  中原 啓貴（Hiroki Nakahara）</p>
+              </div>
+            </div>
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">事務補佐員</h3>
+                <p class="skill-text">
+                  佐藤 美幸 (Miyuki Sato)</p>
+              </div>
+            </div>
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">博士課程３年</h3>
+                <p class="skill-text">
+                  妹尾 豪士（Takeshi Senoo）</p>
+              </div>
+            </div>
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">博士課程２年</h3>
+                <p class="skill-text">
+                  栢之間 涼太（Ryota Kayanoma）</p>
+              </div>
+            </div>
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">修士課程２年（東京工業大学）</h3>
+                <p class="skill-text">
+                  高橋 寮（Ryo Takahashi）</p>
+              </div>
+            </div>
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">修士課程１年（東京工業大学）</h3>
+                <p class="skill-text">
+                  長谷川 陽彦（Haruhiko Hasegawa）</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /skill -->
+
+      <!-- about -->
+      <section class="about section" id="about">
+        <div class="container">
+          <h2 class="title">PUBLICATIONS</h2>
+          <div class="profile">
+            <div class="profile-body">
+
+              <p>
+                <b>Journal Papers</b>
+              </p>
+
+              <p>
+1. Zhiqiang Que, Hiroki Nakahara, Hongxiang Fan, He Li, Jiuxi Meng, Kuen Hung Tsoi, Xinyu Niu, Eriko Nurvitadhi, Wayne Luk:
+Remarn: A Reconfigurable Multi-threaded Multi-core Accelerator for Recurrent Neural Networks. ACM Trans. Reconfigurable Technol. Syst. 16(1): 4:1-4:26 (2023).
+              </p>
+
+            </div>
+          </div>
+          <br><br>
+          <div class="profile">
+            <div class="profile-body">
+
+              <p>
+                <b>Conference Papers</b>
+              </p>
+
+              <p>
+3. Takeshi Senoo, Ryota Kayanoma, Akira Jinguji, Hiroki Nakahara:
+A Light-Weight Vision Transformer Toward Near Memory Computation on an FPGA. ARC 2023: 338-353.
+              </p>
+              <p>
+2. Kennichi Nakamura, Hiroki Nakahara:
+A Consideration on Ternary Adversarial Generative Networks. ISMVL 2023: 1-6.
+              </p>
+
+              <p>
+1. Ryota Kayanoma, Akira Jinguji, Hiroki Nakahara:
+A Many-core Architecture for an Ensemble Ternary Neural Network Toward High-Throughput Inference. MCSoC 2023: 446-453.
+              </p>
+
+              <p>
+
+              </p>
+
+
+            </div>
+          </div>
+
+
+          <div class="profile">
+            <div class="profile-body">
+
+              <p>
+                <b>Domestic Papers</b>
+              </p>
+
+              <p>
+1. 高橋　遼（東工大）,中原啓貴（東北大）, "3D-SRAMを利用したFPGAの検討とシミュレーション," 電子情報通信学会リコンフィギャラブルシステム研究会, RECONF(29), 2024, 6月 (山梨).
+              </p>
+              <p>
+
+              </p>
+
+
+            </div>
+          </div>
+
+
+        </div>
+      </section>
+      <!-- /about -->
+
+      <!-- contact -->
+      <section class="contact section" id="contact">
+        <div class="container">
+          <h2 class="title">CONTACT</h2>
+          <p class="lead">
+            お問い合わせは、<br class="sp-only">メールにてお願いいたします。
+          </p>
+          <div class="contact-list">
+            hiroki[dot]nakahara[dot]b4[at]tohoku.ac.jp
+          </div>
+        </div>
+      </section>
+      <!-- /contact -->
+      <div class="page-top" id="js-page-top">
+        <span class="material-icons-outlined">expand_less</span>
+      </div>
+    </main>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="copyright">&copy;TOHOKU UNIVERSITY NAKAHARA LAB.</div>
+    </footer>
+    <!-- /footer -->
+
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script type='text/javascript' src="js/script.js"></script>
+</body>
+</html>
