--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property='og:title' content='TOHOKU UNIV. NAKAHARA LAB.'>
   <meta property='og:url' content='https://nakaharalab.github.io/'>
   <meta property='og:description' content='TOHOKU UNIV. NAKAHARA LAB.'>
-  <meta property="og:image" content="img/ogp.png">
+  <meta property="og:image" content="img/ogp2.png">
   <meta name="description" content="TOHOKU UNIV. NAKAHARA LAB." />
   <title>東北大学 中原研究室</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
