--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <div class="skill-body">
                 <h3 class="skill-name">博士課程２年</h3>
                 <p class="skill-text">
-                  栢之間 涼太（Ryota Kayanoma）</p>
+                  栢之間 諒汰（Ryota Kayanoma）</p>
               </div>
             </div>
             <div class="skill-item">
